--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,7 +32,7 @@ $mainColor: #2b2b2b; // Колір шрифту за замовчуванням
 // Мінімальна ширина сторінки
 $minWidth: 375;
 // Ширина полотна (макету)
-$maxWidth: 1000;
+$maxWidth: 1600;
 // Ширина обмежуючого контейнера (0 = немає обмеження)
 $maxWidthContainer: 1200;
 // Загальний відступ у контейнера
@@ -61,6 +61,7 @@ $responsiveType: 1;
 
 // Стилі тега BODY ============================================================================================================================================================================================================================================================================================================================================================================================
 body {
+  background-color: #2b2b2b;
   // Скролл заблоковано
   .lock & {
     overflow: hidden;
