--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,56 +1,304 @@
 //====================================================================================================
+.header {
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    opacity: 0;
+    visibility: hidden;
+    box-shadow:
+      rgba(136, 165, 191, 0.48) 6px 2px 16px 0px,
+      rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+
+    @media (max-width: $mobile) {
+      .menu-open & {
+        opacity: 1;
+        visibility: visible;
+        z-index: 5;
+        transition: all 0.3s ease 0.3s;
+      }
+    }
+  }
+
+  &__container {
+  }
+
+  &__body {
+    display: flex;
+    align-items: center;
+    @include adaptiveValue("min-height", 118, 75);
+    column-gap: toRem(15);
+  }
+
+  &__logo {
+    display: block;
+    flex-grow: 0;
+    flex-shrink: 0;
+    @include adaptiveValue("flex-basis", 200, 150, 0, 1230, 991);
+
+    position: relative;
+    z-index: 6;
+    transition: all 0.3s ease 0s;
+
+    @media (any-hover: hover) {
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+
+    img {
+      max-width: 100%;
+    }
+  }
+
+  &__menu {
+    margin-left: auto;
+  }
+}
+
+.menu {
+  &__icon {
+  }
+
+  &__body {
+    @media (max-width: $mobile) {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      left: -100%;
+      background-color: #fff;
+      padding: toRem(100) toRem(15) toRem(40);
+      z-index: 5;
+
+      overflow: auto;
+      transition: left 0.3s ease-out 0s;
+
+      .menu-open & {
+        left: 0;
+      }
+    }
+  }
+
+  &__list {
+    display: flex;
+    @include adaptiveValue("column-gap", 40, 10, 0, 1230, 991);
+    @include adaptiveValue("row-gap", 10, 5, 0, 767, 375);
+    font-size: toRem(18);
+    line-height: 122.2%; /* 22/18 */
+    color: #fff;
+
+    @media (min-width: $mobile) {
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: flex-end;
+    }
+    @media (max-width: $mobile) {
+      color: #000;
+      font-size: toRem(30);
+      flex-direction: column;
+    }
+  }
+
+  &__item {
+    position: relative;
+    display: flex;
+
+    align-items: center;
+    column-gap: toRem(5);
+
+    @media (any-hover: none) {
+      column-gap: toRem(15);
+    }
+
+    @media (any-hover: hover) {
+      &:hover {
+        &::after {
+          transform: rotate(180deg);
+        }
+        .menu__sublist {
+          top: calc(100% + toRem(10));
+          pointer-events: all;
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+    }
+
+    &_arrow {
+      &::after {
+        content: "\e900";
+        @extend %ic;
+        font-size: toRem(10);
+        transition: all 0.3s ease-out 0s;
+
+        @media (max-width: $mobile) {
+          display: none;
+        }
+      }
+      &.open::after {
+        transform: rotate(180deg);
+      }
+
+      @media (max-width: $mobile) {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+    }
+
+    &_hide {
+      @media (min-width: $mobile) {
+        display: none;
+      }
+    }
+  }
+
+  &__link {
+    display: inline-block;
+    position: relative;
+    padding: toRem(5);
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: toRem(1);
+      bottom: 0;
+      left: 0;
+      background-color: #fff;
+      opacity: 0;
+      visibility: hidden;
+      transition: all 0.3s ease-out 0s;
+    }
+
+    @media (any-hover: hover) {
+      &:hover {
+        &::before {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+    }
+  }
+
+  &__sublist {
+    @media (min-width: $mobile) {
+      position: absolute;
+      top: calc(100% + toRem(30));
+      width: toRem(280);
+
+      padding: toRem(15) toRem(10);
+      background-color: #fff;
+      color: #000;
+      opacity: 0;
+      visibility: hidden;
+      pointer-events: none;
+      z-index: 2;
+      transition: all 0.3s ease-out 0s;
+
+      .open & {
+        top: calc(100% + toRem(10));
+        pointer-events: all;
+        opacity: 1;
+        visibility: visible;
+      }
+
+      &::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: toRem(15);
+        top: toRem(-15);
+        left: 0;
+      }
+    }
+
+    @media (max-width: $mobile) {
+      padding-left: toRem(10);
+      @include adaptiveValue("font-size", 30, 25, 0, 767, 375);
+      line-height: 120%;
+    }
+  }
+
+  &__subitem {
+    &:not(:last-child) {
+      @media (min-width: $mobile) {
+        margin-bottom: toRem(5);
+      }
+    }
+  }
+
+  &__sublink {
+    display: block;
+    padding: toRem(5);
+
+    @media (any-hover: hover) {
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+}
 
 //====================================================================================================
 
 //Burger
-/*
+
 .icon-menu {
-	display: none;
-	@media (max-width: $mobile) {
-		display: block;
-		position: relative;
-		width: toRem(30);
-		height: toRem(18);
-		z-index: 5;
-		@media (any-hover: none) {
-			cursor: default;
-		}
-		span,
-		&::before,
-		&::after {
-			content: "";
-			transition: all 0.3s ease 0s;
-			right: 0;
-			position: absolute;
-			width: 100%;
-			height: toRem(2);
-			background-color: #000;
-		}
-		&::before {
-			top: 0;
-		}
-		&::after {
-			bottom: 0;
-		}
-		span {
-			top: calc(50% - toRem(1));
-		}
-		.menu-open & {
-			span {
-				width: 0;
-			}
-			&::before,
-			&::after {
-			}
-			&::before {
-				top: calc(50% - toRem(1));
-				transform: rotate(-45deg);
-			}
-			&::after {
-				bottom: calc(50% - toRem(1));
-				transform: rotate(45deg);
-			}
-		}
-	}
+  display: none;
+  @media (max-width: $mobile) {
+    display: block;
+    position: relative;
+    width: toRem(30);
+    height: toRem(18);
+    z-index: 6;
+    @media (any-hover: none) {
+      cursor: default;
+    }
+    span,
+    &::before,
+    &::after {
+      content: "";
+      transition: all 0.3s ease-out 0s;
+      right: 0;
+      position: absolute;
+      width: 100%;
+      height: toRem(2);
+      background-color: #fff;
+
+      .menu-open & {
+        background-color: #000;
+      }
+    }
+    &::before {
+      top: 0;
+    }
+    &::after {
+      bottom: 0;
+    }
+    span {
+      top: calc(50% - toRem(1));
+    }
+    .menu-open & {
+      span {
+        width: 0;
+      }
+      &::before,
+      &::after {
+      }
+      &::before {
+        top: calc(50% - toRem(1));
+        transform: rotate(-45deg);
+      }
+      &::after {
+        bottom: calc(50% - toRem(1));
+        transform: rotate(45deg);
+      }
+    }
+  }
 }
-*/
