--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -2,13 +2,32 @@
 // Сніппет (HTML): btn
 
 .button {
-	display: inline-flex;
-	padding: 0px 0px;
-	@media (any-hover: hover) {
-		&:hover {
-		}
-	}
-	&--fw {
-		width: 100%;
-	}
+  flex-shrink: 0;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 0px;
+
+  border-radius: toRem(25);
+  background-color: #fff;
+
+  min-width: toRem(300);
+  @include adaptiveValue("min-height", 60, 45);
+  color: #2b2b2b;
+  font-family: Inter;
+  @include adaptiveValue("font-size", 18, 16);
+  font-weight: 500;
+  line-height: 122.2%; /* 22/18 */
+  transition: all 0.3s ease-out 0s;
+  @media (any-hover: hover) {
+    &:hover {
+      box-shadow:
+        rgba(255, 255, 255, 0.2) 0px 4px 16px,
+        rgba(255, 255, 255, 0.2) 0px 8px 24px,
+        rgba(255, 255, 255, 0.2) 0px 16px 56px;
+    }
+  }
+  &--fw {
+    width: 100%;
+  }
 }
