--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,6 +1,9 @@
 //====================================================================================================
 .header {
-  position: relative;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  z-index: 3;
   &::after {
     content: "";
     position: absolute;
