--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,3 +1,88 @@
 //====================================================================================================
+.hero {
+  position: relative;
+
+  &__container {
+  }
+
+  &__body {
+    @include adaptiveValue("padding-top", 268, 200);
+    @include adaptiveValue("padding-bottom", 130, 100);
+    color: #fff;
+
+    @media (max-width: $tablet) {
+      text-align: center;
+      min-height: 100vh;
+    }
+  }
+
+  &__title {
+    font-family: "Playfair Display";
+    @include adaptiveValue("font-size", 90, 35);
+    font-weight: 700;
+    line-height: 112.8%; /* 101.52px */
+    letter-spacing: 1.8px;
+    max-width: toRem(1159);
+
+    &:not(:last-child) {
+      margin-bottom: em(30, 90);
+    }
+  }
+
+  &__text {
+    font-size: toRem(16);
+    font-weight: 400;
+    line-height: 130%; /* 20.8px */
+    max-width: toRem(550);
+
+    @media (max-width: $tablet) {
+      margin: 0 auto;
+    }
+
+    &:not(:last-child) {
+      @include adaptiveValue("margin-bottom", 60, 40);
+    }
+  }
+
+  &__line {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    @include adaptiveValue("gap", 15, 30);
+
+    @media (max-width: $tablet) {
+      flex-direction: column;
+    }
+  }
+
+  &__buttons {
+    display: flex;
+    align-items: center;
+    gap: toRem(15);
+
+    @media (max-width: $tablet) {
+      flex-direction: column;
+      width: 100%;
+    }
+  }
+
+  &__button {
+    @media (max-width: $tablet) {
+      width: 100%;
+    }
+  }
+
+  &__social {
+  }
+
+  &__bg-ibg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
+}
 
 //====================================================================================================
