--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -86,3 +86,59 @@
 }
 
 //====================================================================================================
+
+.about-company {
+  @include adaptiveValue("padding-top", 100, 40);
+  @include adaptiveValue("padding-bottom", 95, 40);
+
+  &__container {
+  }
+
+  &__body {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    @include adaptiveValue("column-gap", 60, 20, 0, 1230, 767);
+    row-gap: toRem(30);
+
+    @media (max-width: $mobile) {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  &__image-ibg {
+    height: fit-content;
+    overflow: hidden;
+    border-radius: toRem(45);
+    padding-bottom: percent(501, 575);
+  }
+
+  &__content {
+  }
+
+  &__title {
+    @include adaptiveValue("font-size", 35, 28);
+    font-weight: 500;
+    line-height: 120%; /* 42px */
+
+    &:not(:last-child) {
+      @include adaptiveValue("margin-bottom", 44, 20);
+    }
+  }
+
+  &__text {
+    font-size: toRem(16);
+    font-weight: 400;
+    line-height: 145%; /* 23.2px */
+
+    p {
+      &:not(:last-child) {
+        @include adaptiveValue("margin-bottom", 15, 10);
+      }
+    }
+  }
+}
+
+//====================================================================================================
+//====================================================================================================
+//====================================================================================================
+//====================================================================================================
