--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -30,4 +30,19 @@
   &--fw {
     width: 100%;
   }
+
+  &_line {
+    min-width: toRem(280);
+    background-color: #fff;
+    border: 1px solid #1e93d8;
+
+    @media (any-hover: hover) {
+      &:hover {
+        background-color: #1e93d8;
+        color: #fff;
+      }
+    }
+  }
 }
+
+//========================================================================================================================================================
