--- a/src/scss/base/forms/button.scss
+++ b/src/scss/base/forms/button.scss
@@ -43,6 +43,20 @@
       }
     }
   }
+
+  &_bg {
+    background-color: #7d98a5;
+    color: #fff;
+
+    @media (any-hover: hover) {
+      &:hover {
+        box-shadow:
+          rgba(25, 152, 165, 0.1) 0px 4px 16px,
+          rgba(25, 152, 165, 0.1) 0px 8px 24px,
+          rgba(25, 152, 165, 0.1) 0px 16px 56px;
+      }
+    }
+  }
 }
 
 //========================================================================================================================================================
