--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -18,3 +18,11 @@
 }
 
 //========================================================================================================================================================
+
+.title {
+  @include adaptiveValue("font-size", 40, 28);
+  font-weight: 600;
+  line-height: 40px; /* 100% */
+}
+
+//========================================================================================================================================================
