--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -147,9 +147,6 @@
   &__container {
   }
 
-  &__body {
-  }
-
   &__items {
   }
 
@@ -174,9 +171,6 @@
   }
 
   &__title {
-    @include adaptiveValue("font-size", 40, 28);
-    font-weight: 600;
-    line-height: 40px; /* 100% */
     &:not(:last-child) {
       margin-bottom: em(20, 40);
     }
@@ -246,5 +240,69 @@
 }
 
 //====================================================================================================
+
+.equipment {
+  @include adaptiveValue("padding-top", 95, 40);
+  @include adaptiveValue("padding-bottom", 95, 40);
+  &__container {
+  }
+
+  &__title {
+    &:not(:last-child) {
+      @include adaptiveValue("margin-bottom", 50, 30);
+    }
+  }
+
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(toRem(200), 1fr));
+    @include adaptiveValue("gap", 60, 15);
+
+    @media (max-width: em(660)) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  &__item {
+  }
+
+  &__button {
+    width: 100%;
+    @include adaptiveValue("margin-top", 60, 40);
+  }
+}
+
+.item-equipment {
+  &__image-ibg--contain {
+    display: block;
+    border-radius: toRem(45);
+    overflow: hidden;
+    padding-bottom: percent(300, 255);
+    border: toRem(1) solid transparent;
+    transition: all 0.3s ease-out 0s;
+
+    &:not(:last-child) {
+      @include adaptiveValue("margin-bottom", 20, 15);
+    }
+
+    @media (any-hover: hover) {
+      &:hover {
+        border: toRem(1) solid #1e93d8;
+      }
+    }
+  }
+
+  &__title {
+    font-weight: 400;
+    line-height: 145%; /* 23.2px */
+    transition: all 0.3s ease-out 0s;
+    @media (any-hover: hover) {
+      &:hover {
+        color: #1e93d8;
+      }
+    }
+  }
+}
+
 //====================================================================================================
 //====================================================================================================
