--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,3 +1,101 @@
 //====================================================================================================
+.footer {
+  @include adaptiveValue("padding-top", 90, 40);
+  @include adaptiveValue("padding-bottom", 50, 30);
+  background-color: #2b2b2b;
+  &__container {
+    display: flex;
+    column-gap: toRem(10);
+    row-gap: toRem(30);
+    @media (min-width: $mobile) {
+      justify-content: space-between;
+    }
+    @media (max-width: $mobile) {
+      flex-direction: column;
+    }
+  }
+
+  &__body {
+  }
+
+  &__menu {
+    color: #d9d9d9;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 130%; /* 20.8px */
+
+    display: flex;
+    @include adaptiveValue("column-gap", 118, 40, 0, 1230, 767);
+    row-gap: toRem(30);
+    @media (max-width: $mobile) {
+      flex-direction: column;
+    }
+  }
+
+  &__logo {
+    display: block;
+
+    @media (min-width: $mobile) {
+      flex-grow: 0;
+      flex-shrink: 0;
+      @include adaptiveValue("flex-basis", 200, 150, 0, 1230, 991);
+    }
+    @media (max-width: $mobile) {
+      @include adaptiveValue("max-width", 200, 170, 0, 767, 375);
+    }
+
+    img {
+      max-width: 100%;
+    }
+
+    transition: all 0.3s ease 0s;
+    @media (any-hover: hover) {
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+  }
+
+  &__list {
+    display: grid;
+    gap: toRem(15);
+  }
+
+  &__item {
+  }
+
+  &__link {
+    transition: all 0.3s ease-out 0s;
+    @media (any-hover: hover) {
+      &:hover {
+        color: #1e93d8;
+      }
+    }
+  }
+
+  &__contact {
+    color: #d9d9d9;
+    display: grid;
+    gap: toRem(10);
+    @include adaptiveValue("margin-top", 85, 30, 0, 1230, 767);
+  }
+
+  &__contact-item {
+    transition: all 0.3s ease-out 0s;
+    @media (any-hover: hover) {
+      &:not(div) {
+        &:hover {
+          color: #1e93d8;
+        }
+      }
+    }
+  }
+
+  &__social {
+    @media (min-width: $mobile) {
+      flex-direction: column;
+    }
+  }
+}
 
 //====================================================================================================
