--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -27,3 +27,69 @@
 }
 
 //========================================================================================================================================================
+
+.top-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  column-gap: toRem(15);
+  &__title {
+  }
+
+  &__link {
+    position: relative;
+    color: #000;
+    font-size: toRem(24);
+    font-weight: 400;
+    line-height: 120.8%; /* 29/24 */
+    text-transform: uppercase;
+    transition: all 0.3s ease-out 0s;
+
+    &::before {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: toRem(1);
+      bottom: 0;
+      left: 0;
+      background-color: #000;
+      opacity: 1;
+      visibility: visible;
+      transition: all 0.3s ease-out 0s;
+    }
+
+    @media (any-hover: hover) {
+      &:hover {
+        color: #1e93d8;
+        &::before {
+          background-color: #1e93d8;
+        }
+      }
+    }
+  }
+}
+
+//========================================================================================================================================================
+
+.fancybox__container {
+  max-width: none;
+}
+
+//========================================================================================================================================================
+
+.play {
+  &::before {
+    content: "\e904";
+    @extend %ic;
+    color: #fff;
+    font-size: toRem(100);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    transition: all 0.3s ease-out 0s;
+  }
+}
+
+//========================================================================================================================================================
