--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -39,7 +39,7 @@
   &__link {
     position: relative;
     color: #000;
-    font-size: toRem(24);
+    @include adaptiveValue("font-size", 24, 18);
     font-weight: 400;
     line-height: 120.8%; /* 29/24 */
     text-transform: uppercase;
@@ -82,7 +82,7 @@
     content: "\e904";
     @extend %ic;
     color: #fff;
-    font-size: toRem(100);
+    @include adaptiveValue("font-size", 100, 60);
     position: absolute;
     top: 50%;
     left: 50%;
