--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -28,6 +28,21 @@
     }
   }
 
+  &_dark {
+    position: relative;
+
+    .menu__list {
+      color: #000;
+    }
+    .icon-menu {
+      span,
+      &::before,
+      &::after {
+        background-color: #000;
+      }
+    }
+  }
+
   &__container {
   }
 
@@ -191,6 +206,7 @@
 
   &__sublist {
     @media (min-width: $mobile) {
+      box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
       position: absolute;
       top: calc(100% + toRem(30));
       width: toRem(280);
