--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -277,9 +277,26 @@
     width: 100%;
     @include adaptiveValue("margin-top", 60, 40);
   }
+
+  &__subtitle {
+    @include adaptiveValue("font-size", 35, 22);
+    font-weight: 600;
+    line-height: 120%; /* 42px */
+
+    &:not(:last-child) {
+      @include adaptiveValue("margin-bottom", 34, 20);
+    }
+  }
+  &__text {
+    @include adaptiveValue("font-size", 16, 14);
+    line-height: 130%; /* 20.8px */
+  }
 }
 
 .item-equipment {
+  &__text {
+  }
+
   &__image-ibg--contain {
     display: block;
     border-radius: toRem(45);
@@ -300,6 +317,7 @@
   }
 
   &__title {
+    @include adaptiveValue("font-size", 16, 14);
     font-weight: 400;
     line-height: 145%; /* 23.2px */
     transition: all 0.3s ease-out 0s;
