--- a/src/scss/seminars.scss
+++ b/src/scss/seminars.scss
@@ -77,3 +77,135 @@
     margin-top: auto;
   }
 }
+
+//========================================================================================================================================================
+//========================================================================================================================================================
+
+.seminar {
+  @include adaptiveValue("padding-top", 120, 50);
+  @include adaptiveValue("padding-bottom", 95, 60);
+  &__container {
+  }
+
+  &__body {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    @include adaptiveValue("column-gap", 60, 20, 0, 1230, 767);
+    row-gap: toRem(30);
+
+    @media (max-width: $mobile) {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  &__image-ibg {
+    padding-bottom: percent(501, 570);
+    overflow: hidden;
+    border-radius: toRem(45);
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    @include adaptiveValue("gap", 30, 25);
+    font-size: toRem(16);
+    font-weight: 400;
+    line-height: 130%;
+  }
+
+  &__date {
+    &:not(:last-child) {
+      @include adaptiveValue("margin-bottom", 30, 0);
+    }
+  }
+
+  &__title {
+    @include adaptiveValue("font-size", 35, 25);
+    font-weight: 600;
+    line-height: 120%; /* 42px */
+  }
+
+  &__list {
+  }
+
+  &__price {
+  }
+
+  &__adress {
+    &:not(:last-child) {
+      @include adaptiveValue("margin-bottom", 30, 0);
+    }
+    a {
+      transition: all 0.3s ease-out 0s;
+      @media (any-hover: hover) {
+        &:hover {
+          color: #1e93d8;
+        }
+      }
+    }
+  }
+
+  &__button {
+    font-weight: 600;
+    width: 100%;
+  }
+}
+
+//========================================================================================================================================================
+
+.other-seminar {
+  @include adaptiveValue("padding-top", 95, 40);
+  @include adaptiveValue("padding-bottom", 95, 60);
+  &__container {
+  }
+  &__title {
+    @include adaptiveValue("margin-bottom", 37, 30);
+  }
+
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(toRem(200), 1fr));
+    @include adaptiveValue("column-gap", 60, 15);
+    @include adaptiveValue("row-gap", 60, 30);
+
+    @media (max-width: em(660)) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  &__item {
+  }
+}
+.item-other-seminar {
+  &__image-ibg {
+    display: block;
+    overflow: hidden;
+    @include adaptiveValue("border-radius", 45, 35);
+    padding-bottom: percent(300, 255);
+
+    &:not(:last-child) {
+      margin-bottom: toRem(20);
+    }
+
+    @media (any-hover: hover) {
+      &:hover {
+        img {
+          transform: scale(1.05);
+        }
+      }
+    }
+
+    img {
+      transition: all 0.3s ease 0s;
+    }
+  }
+
+  &__title {
+    transition: all 0.3s ease-out 0s;
+    @media (any-hover: hover) {
+      &:hover {
+        color: #1e93d8;
+      }
+    }
+  }
+}
