--- a/src/scss/seminars.scss
+++ b/src/scss/seminars.scss
@@ -200,6 +200,25 @@
     }
   }
 
+  &__image-ibg--contain {
+    display: block;
+    overflow: hidden;
+    @include adaptiveValue("border-radius", 45, 35);
+    padding-bottom: percent(300, 255);
+    border: toRem(1) solid transparent;
+    transition: all 0.3s ease-out 0s;
+
+    &:not(:last-child) {
+      @include adaptiveValue("margin-bottom", 20, 15);
+    }
+
+    @media (any-hover: hover) {
+      &:hover {
+        border: toRem(1) solid #1e93d8;
+      }
+    }
+  }
+
   &__title {
     transition: all 0.3s ease-out 0s;
     @media (any-hover: hover) {
