--- a/src/scss/base/popup.scss
+++ b/src/scss/base/popup.scss
@@ -1,61 +1,112 @@
 body::after {
-	content: "";
-	background-color: rgba(0, 0, 0, 0.5);
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	opacity: 0;
-	transition: opacity 0.8s ease 0s;
-	pointer-events: none;
-	z-index: 149;
+  content: "";
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 0.8s ease 0s;
+  pointer-events: none;
+  z-index: 149;
 }
 .popup-show body::after {
-	opacity: 1;
+  opacity: 1;
 }
 .popup {
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	padding: 30px 10px;
-	transition: visibility 0.8s ease 0s;
-	visibility: hidden;
-	pointer-events: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  padding: 30px 10px;
+  transition: visibility 0.8s ease 0s;
+  visibility: hidden;
+  pointer-events: none;
 }
 .popup_show {
-	z-index: 150;
-	visibility: visible;
-	overflow: auto;
-	pointer-events: auto;
+  z-index: 150;
+  visibility: visible;
+  overflow: auto;
+  pointer-events: auto;
 }
 .popup_show .popup__content {
-	visibility: visible;
-	transform: scale(1);
+  visibility: visible;
+  transform: scale(1);
 }
 .popup__wrapper {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	min-height: 100%;
-	flex: 1 1 auto;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100%;
+  flex: 1 1 auto;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .popup__content {
-	visibility: hidden;
-	transform: scale(0);
-	transition: transform 0.3s ease 0s;
-	background-color: #eee;
-	padding: 20px;
-	width: 100%;
-	max-width: 900px;
-	border-radius: 20px;
-	.lock & {
-		visibility: visible;
-	}
+  position: relative;
+  visibility: hidden;
+  transform: scale(0);
+  transition: transform 0.3s ease 0s;
+  background-color: #eee;
+  padding: 20px;
+  width: 100%;
+  max-width: toRem(1200);
+  border-radius: 20px;
+  .lock & {
+    visibility: visible;
+  }
+}
+
+.popup .popup__bg-ibg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+//========================================================================================================================================================
+
+.popup-contact {
+  .popup__content {
+    border-radius: toRem(30);
+    overflow: hidden;
+    @include adaptiveValue("padding-top", 105, 40);
+    @include adaptiveValue("padding-bottom", 105, 40);
+    @include adaptiveValue("padding-left", 115, 20);
+    @include adaptiveValue("padding-right", 115, 20);
+  }
+  .popup__close {
+    position: absolute;
+    top: toRem(-9999);
+  }
+  &__title {
+    color: #fff;
+    @include adaptiveValue("font-size", 36, 22);
+    font-weight: 400;
+    line-height: 120%; /* 43.2px */
+
+    @include adaptiveValue("margin-bottom", 60, 40);
+  }
+
+  &__form {
+  }
+}
+.contact-form {
+  &__input {
+    @include adaptiveValue("margin-bottom", 50, 30);
+  }
+
+  &__button {
+    @include adaptiveValue("margin-top", 20, 10);
+
+    @media (max-width: $mobile) {
+      width: 100%;
+    }
+  }
 }
