--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -121,13 +121,11 @@
     }
   }
 
-  &__text {
-    &:not(:last-child) {
-      @include adaptiveValue("margin-bottom", 60, 40);
-    }
+  a {
+    text-decoration: underline;
   }
 
-  &__title {
+  h2 {
     font-weight: 500;
     line-height: 150%; /* 24px */
     text-transform: uppercase;
@@ -137,9 +135,32 @@
     }
   }
 
-  &__list {
+  ul {
     &:not(:last-child) {
       margin-bottom: toRem(30);
+    }
+    P {
+      &:not(:last-child) {
+        margin-bottom: 0;
+      }
+    }
+    li {
+      line-height: 145%;
+      &:not(p) {
+        position: relative;
+        @include adaptiveValue("padding-left", 25, 12);
+
+        &::before {
+          content: "";
+          position: absolute;
+          width: toRem(5);
+          height: toRem(5);
+          top: toRem(7);
+          @include adaptiveValue("left", 13, 0);
+          background-color: #2b2b2b;
+          border-radius: 50%;
+        }
+      }
     }
   }
 }
