--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -17,7 +17,7 @@
     }
     @media (max-width: $tablet) {
       text-align: center;
-      min-height: 100vh;
+      min-height: 100svh;
     }
   }
 
