--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -16,21 +16,21 @@
       min-height: toRem(900);
     }
     @media (max-width: $tablet) {
-      text-align: center;
       min-height: 100svh;
+      justify-content: flex-end;
     }
   }
 
   &__title {
     font-family: "Playfair Display";
-    @include adaptiveValue("font-size", 90, 35);
+    @include adaptiveValue("font-size", 90, 40);
     font-weight: 700;
     line-height: 112.8%; /* 101.52px */
     letter-spacing: 1.8px;
     max-width: toRem(1159);
 
     &:not(:last-child) {
-      margin-bottom: em(30, 90);
+      @include adaptiveValue("margin-bottom", 30, 10);
     }
 
     &_nomax {
@@ -40,7 +40,7 @@
   }
 
   &__text {
-    font-size: toRem(16);
+    @include adaptiveValue("font-size", 16, 18);
     font-weight: 400;
     line-height: 130%; /* 20.8px */
     max-width: toRem(550);
@@ -50,7 +50,7 @@
     }
 
     &:not(:last-child) {
-      @include adaptiveValue("margin-bottom", 60, 40);
+      @include adaptiveValue("margin-bottom", 60, 80);
     }
   }
 
@@ -63,6 +63,8 @@
 
     @media (max-width: $tablet) {
       flex-direction: column;
+      align-items: flex-start;
+      margin-top: toRem(65);
     }
   }
 
@@ -74,7 +76,6 @@
 
     @media (max-width: $tablet) {
       flex-direction: column;
-      width: 100%;
     }
   }
 
